--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
 
-      <div id="banner">
+      <!-- <div id="banner">
         <span id="logo"></span>
 
-        <!-- <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
@@ -34,8 +34,8 @@
               <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
             </ul>
           </div>
-        {% endif %} -->
-      </div>
+        {% endif %}
+      </div> -->
 
     <div class="wrapper">
       <nav>
