--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-      <header>
+      <header style="position: relative;">
         <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
@@ -41,7 +41,7 @@
       <nav>
         <ul></ul>
       </nav>
-      <section>
+      <section style="margin-top: 0px;">
         {{ content }}
 
       </section>
