--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {% include head-custom.html %}
 
     <style>
-        header {
+        #headerdiv {
             position: fixed;
             left: 0px;
             top: 0px;
@@ -150,7 +150,7 @@
       </header> -->
 
       <!-- topmenu-start -->
-<header>
+<div id="headerdiv">
     <section id="global-nav">
         <nav>
             <ul class="projects">
@@ -191,7 +191,7 @@
             </ul>
         </nav>
     </section>
-</header>
+</div>
 <!-- topmenu-end -->
 
 
