--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -151,7 +151,7 @@
 
       <!-- topmenu-start -->
 <div id="headerdiv">
-    <section id="global-nav">
+    <div id="global-nav">
         <nav>
             <ul class="projects">
                     <li><a href="/">ITeedu.com</a></li>
@@ -190,7 +190,7 @@
 					<li><a href="/me/contactme.htm">关于</a></li>
             </ul>
         </nav>
-    </section>
+    </div>
 </div>
 <!-- topmenu-end -->
 
