--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
         #global-nav nav {
             height: 34px;
             padding: 0px 20px;
+            margin: 0px;
+            width: 100%;
         }
 
         #global-nav nav ul {
