--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,8 @@
             padding: 0px 20px;
             margin: 0px;
             width: 100%;
+            top:0px;
+            left:auto;
         }
 
         #global-nav nav ul {
