--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -156,7 +156,7 @@
       <!-- topmenu-start -->
 <div id="headerdiv">
     <div id="global-nav">
-        <nav>
+        <!-- <nav> -->
             <ul class="projects">
                     <li><a href="/">ITeedu.com</a></li>
             </ul>
@@ -193,7 +193,7 @@
                     </li>
 					<li><a href="/me/contactme.htm">关于</a></li>
             </ul>
-        </nav>
+        <!-- </nav> -->
     </div>
 </div>
 <!-- topmenu-end -->
