--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -156,11 +156,11 @@
       <!-- topmenu-start -->
 <div id="headerdiv">
     <div id="global-nav">
-        <!-- <nav> -->
-            <ul class="projects">
+        <nav>
+            <ol class="projects">
                     <li><a href="/">ITeedu.com</a></li>
-            </ul>
-            <ul class="links">
+            </ol>
+            <ol class="links">
                     <li><a>快捷导航</a>
                         <ul>
                             <li><a href="/plang/">编程语言</a></li>
@@ -192,8 +192,8 @@
                         </ul>
                     </li>
 					<li><a href="/me/contactme.htm">关于</a></li>
-            </ul>
-        <!-- </nav> -->
+                </ol>
+        </nav>
     </div>
 </div>
 <!-- topmenu-end -->
