--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             left:auto;
         }
 
-        #global-nav nav ul {
+        #global-nav nav ol {
             list-style: none;
             margin: 0px;
             text-align: left;
@@ -52,11 +52,11 @@
             padding: 0px;
         }
 
-        #global-nav nav ul.links {
+        #global-nav nav ol.links {
             float: right;
         }
 
-        #global-nav nav ul li {
+        #global-nav nav ol li {
             font: bold 13px/17px "Helvetica Neue", Helvetica, Arial, Geneva,
                 sans-serif;
             transition: 0.2s;
@@ -77,16 +77,16 @@
             -webkit-transition: all 0.2s;
         }
 
-        #global-nav nav ul li:hover {
+        #global-nav nav ol li:hover {
             background: rgb(0, 0, 0);
             color: rgb(255, 255, 255);
         }
 
-        #global-nav nav ul li i {
+        #global-nav nav ol li i {
             height: 1em;
         }
 
-        #global-nav nav ul li a {
+        #global-nav nav ol li a {
             padding: 8px 12px;
             color: rgb(230, 230, 230);
             font-style: normal;
@@ -95,7 +95,7 @@
             display: block;
         }
 
-        #global-nav nav ul li ul {
+        #global-nav nav ol li ol {
             padding: 0px;
             transition: opacity 0.2s;
             left: -2px;
@@ -111,28 +111,28 @@
             -webkit-transiton: opacity 0.2s;
         }
 
-        #global-nav nav ul li ul.wide {
+        #global-nav nav ol li ol.wide {
             width: 260px;
         }
 
-        #global-nav nav ul li ul li {
+        #global-nav nav ol li ol li {
             background: rgb(0, 0, 0);
             color: rgb(255, 255, 255);
             float: none;
             display: block;
         }
 
-        #global-nav nav ul li ul li:hover {
+        #global-nav nav ol li ol li:hover {
             background: rgb(0, 0, 0);
         }
 
-        #global-nav nav ul li:hover ul {
+        #global-nav nav ol li:hover ol {
             display: block;
             visibility: visible;
             opacity: 1;
         }
 
-        #global-nav nav ul.projects li.project {
+        #global-nav nav ol.projects ol.project {
             padding: 0px;
             width: 42px;
             height: 33px;
@@ -140,7 +140,7 @@
             z-index: 10;
         }
 
-        #global-nav nav ul.projects li.project a {
+        #global-nav nav ol.projects li.project a {
             height: 33px;
             display: block;
         }
@@ -162,7 +162,7 @@
             </ol>
             <ol class="links">
                     <li><a>快捷导航</a>
-                        <ul>
+                        <ol>
                             <li><a href="/plang/">编程语言</a></li>
                             <li><a href="/webtech/">WEB开发</a></li>
                             <li><a href="/handset/">手机开发</a></li>
@@ -172,24 +172,24 @@
                             <li><a href="/opensource/">开源软件</a></li>
                             <li><a href="/works/">作品</a></li>
 
-                        </ul>
+                        </ol>
                     </li>
                     <li><a href="/plang/asm/">编辑语言</a>
-                        <ul>
+                        <ol>
                                 <li><a href="/plang/asm/">汇编</a></li>
                                 <li><a href="/plang/ccpp/">C/C++</a> </li>
                                 <li><a href="/plang/java/">JAVA</a> </li>
                                 <li><a href="/plang/python/">Python</a> </li>
                                 <li><a href="/plang/ruby/">Ruby</a></li>
-                        </ul>
+                        </ol>
                     </li>
                     <li><a href="/webtech/">WEB开发</a>
-                        <ul>
+                        <ol>
                             <li><a href="/webtech/javascript/">javascript</a> </li>
                             <li><a href="/webtech/j2ee/">J2EE</a> </li>
                             <li><a href="/webtech/php/">PHP</a> </li>
                             <li><a href="/webtech/python/djangocn2/">Django</a> </li>
-                        </ul>
+                        </ol>
                     </li>
 					<li><a href="/me/contactme.htm">关于</a></li>
                 </ol>
