--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,7 +155,7 @@
 
       <!-- topmenu-start -->
 <div id="headerdiv">
-    <div id="global-nav">
+    <section id="global-nav">
         <nav>
             <ol class="projects">
                     <li><a href="/">ITeedu.com</a></li>
@@ -194,7 +194,7 @@
 					<li><a href="/me/contactme.htm">关于</a></li>
                 </ol>
         </nav>
-    </div>
+    </section>
 </div>
 <!-- topmenu-end -->
 
