--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     {% include head-custom.html %}
 
     <style>
-        #headerdiv {
+        #global-nav {
             position: fixed;
             left: 0px;
             top: 0px;
@@ -152,7 +152,7 @@
       </header> -->
 
       <!-- topmenu-start -->
-<div id="headerdiv">
+<div id="global-nav">
         <nav>
             <ol class="projects">
                     <li><a href="/">ITeedu.com</a></li>
