--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,12 @@
     <style>
         #global-nav {
             position: fixed;
+            left: 0px;
+            top: 0px;
             display: block;
             width: 100%;
             z-index: 999;
-            
+            background: repeat-x 0px bottom rgb(27, 27, 27);
         }
 
         #global-nav nav {
@@ -29,7 +31,8 @@
             padding: 0px 20px;
             margin: 0px;
             width: 100%;
-            background: repeat-x 0px bottom rgb(27, 27, 27);
+            top:0px;
+            left:auto;
         }
 
         #global-nav nav ol {
