--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,16 +23,17 @@
             display: block;
             width: 100%;
             z-index: 999;
-            background: repeat-x 0px bottom rgb(27, 27, 27);
+            
         }
 
         #global-nav nav {
             height: 34px;
-            padding: 0px 20px;
+            /* padding: 0px 20px; */
             margin: 0px;
             width: 100%;
             top:0px;
             left:auto;
+            background: repeat-x 0px bottom rgb(27, 27, 27);
         }
 
         #global-nav nav ol {
