--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     {% include head-custom.html %}
 
     <style>
+        nav {
+            display: block;
+        }
         #global-nav {
             position: fixed;
             left: 0px;
